--- a/204_hw2.Rmd
+++ b/204_hw2.Rmd
@@ -112,7 +112,7 @@ ggplot(data.frame(x = c(0,250)), aes(x = x)) +
 
 # Total cost of meeting target
 
-# P* using the new Q* based on abatement
+# P* using the new Q* 
 kern_p <- {kern_slope*(kern_baseline-99.3)}
 mojave_p <- {mojave_slope*(mojave_baseline-92.68)}
 antelope_p <- {antelope_slope*(antelope_baseline-145.64)}
@@ -181,7 +181,7 @@ government_revenue
 ```
 ## Cap and trade
 ```{r}
-# calculate stringency of policy= baseline-abatement/abatement
+# calculate stringency of policy= abatement/baseline
 kern_trade_abatement <- tau_star/kern_slope
 kern_stringency <- (kern_trade_abatement)/(kern_baseline)
 
@@ -224,13 +224,13 @@ kern_trade_cost
 mojave_trade_money <- (mojave_trade_abatement - 47.32)*(tau_star)
 mojave_trade_money
 #Mojave abated less than with the 1/3, so add amount spent from buying extra to total cost 
-mojave_trade_cost <- mojave_post_trade_cost+mojave_trade_money
+mojave_trade_cost <- mojave_post_trade_cost-mojave_trade_money
 mojave_trade_cost
 
 antelope_trade_money <- (antelope_trade_abatement - 74.36)*tau_star
 antelope_trade_money
 #Antelope abated less than with the 1/3, so add amount spent from buying extra to total cost
-antelope_trade_cost <- antelope_post_trade_cost+antelope_trade_money
+antelope_trade_cost <- antelope_post_trade_cost-antelope_trade_money
 antelope_trade_cost
 
 ventura_trade_money <- (ventura_trade_abatement - 82.81)*tau_star
@@ -243,15 +243,15 @@ ventura_trade_cost
 
 #A severe drought hits California, and it is necessary to reduce water use from 500 AF down to 300 AF. Your job is to estimate the cost of the drought (i.e., the cost of reducing water use from 500 AF to 300 AF) to each irrigation district under each policy. Considering the entire jump from status quo (755 AF) to the drought (300 AF), which policy is preferred by each irrigation district? How does your answer depend on how rights are allocated to each district (in policies (a) and (c))2?
 
-## Cap without trade
+## Cap without trade-drought
 ```{r}
-# stringency = 455/755 = 0.602
-# baseline*0.602 = abatement
-# P* using the new Q* based on abatement
-kern_p_drought <- {kern_slope*(kern_baseline-59.7)}
-mojave_p_drought <- {mojave_slope*(mojave_baseline-55.72)}
-antelope_p_drought <- {antelope_slope*(antelope_baseline-87.56)}
-ventura_p_drought <- {ventura_slope*(ventura_baseline-97.51)}
+# stringency = 200/500 = 0.4
+# baseline*0.4 = new use
+# P* using the new Q*
+kern_p_drought <- {kern_slope*(kern_baseline-60)}
+mojave_p_drought <- {mojave_slope*(mojave_baseline-56)}
+antelope_p_drought <- {antelope_slope*(antelope_baseline-88)}
+ventura_p_drought <- {ventura_slope*(ventura_baseline-98)}
 
 kern_p_drought
 mojave_p_drought
@@ -259,17 +259,17 @@ antelope_p_drought
 ventura_p_drought
 
 # calculate area of triangle using 1/2(P*)(change in Q) to get individual costs
-kern_cost_drought <- 0.5*(kern_p_drought)*(59.7)
-mojave_cost_drought <- 0.5*(mojave_p_drought)*(84.28)
-antelope_cost_drought <- 0.5*(antelope_p_drought)*(132.44)
-ventura_cost_drought <- 0.5*(ventura_p_drought)*(147.49)
+kern_cost_drought <- 0.5*(kern_p_drought)*(90)
+mojave_cost_drought <- 0.5*(mojave_p_drought)*(84)
+antelope_cost_drought <- 0.5*(antelope_p_drought)*(132)
+ventura_cost_drought <- 0.5*(ventura_p_drought)*(147)
 
 kern_cost_drought
 mojave_cost_drought
 antelope_cost_drought
 ventura_cost_drought
 ```
-# Tax on water use
+# Tax on water use-drought
 ```{r}
 # stringency calculated by horizontally summing the 4 MC(A) curves
 horizontal_sum <- (1/kern_slope)+(1/mojave_slope)+(1/antelope_slope)+(1/ventura_slope)
@@ -300,7 +300,7 @@ mojave_cost_tax_drought
 antelope_cost_tax_drought
 ventura_cost_tax_drought
 ```
-# Cap and Trade
+# Cap and Trade-drought
 ```{r}
 # calculate stringency of policy= baseline-abatement/abatement
 kern_trade_abatement_d <- tau_star_drought/kern_slope
@@ -340,13 +340,13 @@ kern_trade_cost_d
 mojave_trade_money_d <- (mojave_trade_abatement_d - 84.28)*(tau_star_drought)
 mojave_trade_money_d
 #Mojave abated less than with the 1/3, so add amount spent from buying extra to total cost 
-mojave_trade_cost_d <- mojave_post_trade_cost_d+mojave_trade_money_d
+mojave_trade_cost_d <- mojave_post_trade_cost_d-mojave_trade_money_d
 mojave_trade_cost_d
 
 antelope_trade_money_d <- (antelope_trade_abatement_d - 132.44)*tau_star_drought
 antelope_trade_money_d
 #Antelope abated less than with the 1/3, so add amount spent from buying extra to total cost
-antelope_trade_cost_d <- antelope_post_trade_cost_d+antelope_trade_money_d
+antelope_trade_cost_d <- antelope_post_trade_cost_d-antelope_trade_money_d
 antelope_trade_cost_d
 
 ventura_trade_money_d <- (ventura_trade_abatement_d - 147.49)*tau_star_drought
